fix: layout bugs

--- a/src/styles/base-settings.scss
+++ b/src/styles/base-settings.scss
@@ -15,12 +15,6 @@
   font-weight: normal;
   color: #242424;
 }
-%base-margin-settings {
-  margin-top: 13.125%;
-  margin-left: 8.4%;
-  margin-right: 8.4%;
-
-}
 
 
 
