--- a/src/styles/input/input.scss
+++ b/src/styles/input/input.scss
@@ -4,6 +4,7 @@
   border: none;
   outline: none;
   border-bottom: 1px solid #242424;
+  background-color: inherit;
   font-family: inherit;
   font-style: inherit;
   color: inherit;
