--- a/src/styles/page/page.scss
+++ b/src/styles/page/page.scss
@@ -1,3 +1,6 @@
 .page {
   @extend %base-font-settings;
+  background-color: #E5E5E5;
+  min-width: 320px;
+  min-height: 100vh;
 }
